--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>new name</h1>
     <img width="200px" src="profile.jpg" alt="">
     <p>my profile text</p>
+    <p>iam william</p>
 </body>
 </html>
